k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: parallel-container-test-service
  labels:
    app: parallel-container-test
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 3333
    protocol: TCP
    name: http
  selector:
    app: parallel-container-test
